# ExternalSortMT

./: README.md  external_sort.hpp
details/: async.cpp  async.hpp  common.hpp  file_chunk_reader.hpp  file_part.hpp  file_writer.hpp  merge_sorter.hpp  multiple_file_reader.hpp  noexcept_support.hpp  split_sorter.hpp
tests/: CMakeLists.txt  main.cpp  tests.hpp
